--- a/.classpath
+++ b/.classpath
@@ -318,5 +318,6 @@
 	<classpathentry kind="lib" path="D:/fframe/lib_spark/spark2/kafka-0.10/paranamer-2.8.jar"/>
 	<classpathentry kind="lib" path="D:/fframe/lib_spark/spark2/kafka-0.10/spark-sql-kafka-0-10_2.11-2.4.0.cloudera2.jar"/>
 	<classpathentry kind="lib" path="D:/fframe/lib_spark/spark2/kafka-0.10/spark-streaming-kafka-0-10_2.11-2.4.0.cloudera2.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/juniversalchardet-1.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
