--- a/.classpath
+++ b/.classpath
@@ -320,5 +320,20 @@
 	<classpathentry kind="lib" path="D:/fframe/lib_spark/spark2/kafka-0.10/spark-streaming-kafka-0-10_2.11-2.4.0.cloudera2.jar"/>
 	<classpathentry kind="lib" path="D:/fframe/lib_spark/juniversalchardet-1.0.3.jar"/>
 	<classpathentry kind="lib" path="D:/fframe/lib_spark/ojdbc7-12.1.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/hive_metastore.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/hive_service.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/httpclient-4.1.3.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/httpcore-4.1.3.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/ImpalaJDBC41.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/libfb303-0.9.0.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/libthrift-0.9.0.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/ql.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/slf4j-api-1.5.11.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/slf4j-log4j12-1.5.11.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/TCLIServiceClient.jar"/>
+	<classpathentry kind="lib" path="D:/fframe/lib_spark/impala/zookeeper-3.4.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
